--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: yellow;"> 
-    <div style="background-color: red; height: 100px; width: 100px; padding: 8px; margin-bottom: 8px;">
+
+<body style="background-color: #9c3af4;"> 
+    <div
+        style="background-color: red; height: 100px; width: 100px; padding: 8px; margin-bottom: 8px; border-bottom: 10px dotted black; border-top: 10px solid black;">
         <div style="background-color: green; height: 50px; width: 50px;">
-            
+
         </div>
     </div>
     <div style="">
@@ -16,6 +19,27 @@
         <span style="margin-right: 8px;">B</span>
         <span style="margin-right: 8px;">C</span>
     </div>
-</body>
-</html>
 
+    <div
+        style="background-color: royalblue; height: 100px; width: 100px; padding: 8px; margin-bottom: 8px; border: 5px double black; border-radius: 8px;">
+        <div style="background-color: aliceblue; height: 50px; width: 50px;">
+
+        </div>
+        <div style="background-color: wheat; height: 50px;width: 50px;">
+
+        </div>
+    </div>
+    <div>
+        <span style="margin-right: 8px;">1</span>
+        <span style="margin-right: 8px;">2</span>
+        <span style="margin-right: 8px;">3</span>
+    </div>
+
+    <div style="background-color: chocolate; height: 200px; width: 200px; margin: 20px; border: 10px ; border-style: inset; border-color: pink; border-radius: 20px 20px 0px 0px ;">
+
+    </div>
+
+
+</body>
+
+</html>
