--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <span style="margin-right: 8px;">3</span>
     </div>
 
-    <div style="background-color: chocolate; height: 200px; width: 200px; margin: 20px; border: 10px ; border-style: inset; border-color: pink; border-radius: 20px 20px 0px 0px ;">
+    <div style="background-color: chocolate; height: 200px; width: 200px; margin: 20px; border: 10px ; border-style: inset; border-color: pink; border-radius: 50% ;">
 
     </div>
 
