fixed border css and added image url

--- a/index2.html
+++ b/index2.html
@@ -17,10 +17,10 @@
         <span style="color: #000000;">kokab ali</span>
 
     </div>
-    <div style="background-color: #000000; height: 300px; width: 300px; margin-top: 10px; border: double 10px #ffffff; border-radius: 50px;">
+    <div style="background-color: #000000; height: 300px; width: 300px; margin-top: 10px; border: 10px double #ffffff; border-radius: 50px;">
         
         <div>
-            <img src="f:\istockphoto-1550071750-612x612.jpg" height="100px" width="100px" alt="" style="margin-top: 10px; margin-inline-start: 10px; border-radius: 10px;">
+            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb" height="100px" width="100px" alt="Random" style="margin-top: 10px; margin-inline-start: 10px; border-radius: 10px;">
         </div>
 
     </div>
