travel agency code

--- a/index3.html
+++ b/index3.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: rgb(13, 165, 165);">
-   <center> <img src="f:\WhatsApp Image 2025-05-26 at 19.16.00_fe02c98c.jpg" height="300px" width="350px" alt="">
+<body">
+    <h1 style="text-align: center;"> <i>Personal Details</i> </h1>
+    <h2 style="text-align: right; color: cadetblue;"> <u>Kokab Ali</u> </h2>
+    <p>Hii i am <b> kokab Ali </b> i am a web developer, My favourite colour is <u> sky blue and black </u>, My
+        favourites sport is <a href="https://en.wikipedia.org/wiki/Cricket">Cricket</a> </p>
 
-    <h1 style="color: #9f6a4d;">Kokab ali</h1> </center>
-    <div style="background-color: #111111; height: 200px; width: 200px; border: 10px double #ffffff; border-radius: 10px 10px 10px 10px; ">
+    <ul>
+        <li> <a href="Educationaldata.html">Educational Data</a> </li>
+        <li><a href="Enquirydata.html">Enquiry Form</a></li>
 
-    </div>
-</body>
+    </ul>
+
+
+    <img style="border-radius: 20px; margin: 78%; margin-top: 10px;"
+        src="c:\Users\kokap\Documents\WhatsApp Image 2025-07-08 at 19.36.24_d22866d9.jpg" alt="boyinchair"
+        height="250px" width="300px">
+    <p style="color: aliceblue;"> hii this is <b>kokab ali</b></p>
+    </body>
+
 </html>
