css extrnal index2

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+ <style>
+    .nm-body{
+        background-color: #9c3af4;
+    }
+    .mm-body{
+        background-color: red; height: 100px; width: 100px; padding: 8px; margin-bottom: 8px; border-bottom: 10px dotted black; border-top: 10px solid black;
+    }
+ </style>
 </head>
 
-<body style="background-color: #9c3af4;"> 
+<body class="nm-body"> 
     <div
-        style="background-color: red; height: 100px; width: 100px; padding: 8px; margin-bottom: 8px; border-bottom: 10px dotted black; border-top: 10px solid black;">
+       class="mm-body">
         <div style="background-color: green; height: 50px; width: 50px;">
 
         </div>
