--- a/index.html
+++ b/index.html
@@ -5,45 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
- <style>
-    .nm-body{
-        background-color: #9c3af4;
-    }
-    .mm-body{
-        background-color: red; height: 100px; width: 100px; padding: 8px; margin-bottom: 8px; border-bottom: 10px dotted black; border-top: 10px solid black;
-    }
- </style>
+    <link rel="stylesheet" href=".///styles/index.css">
+
 </head>
 
-<body class="nm-body"> 
-    <div
-       class="mm-body">
+<body class="nm-body">
+    <div class="mm-body">
         <div style="background-color: green; height: 50px; width: 50px;">
 
         </div>
     </div>
     <div style="">
-        <span style="margin-right: 8px;">A</span>
-        <span style="margin-right: 8px;">B</span>
-        <span style="margin-right: 8px;">C</span>
+        <span class="a-body">A</span>
+        <span class="b-body">B</span>
+        <span class="c-body">C</span>
     </div>
 
-    <div
-        style="background-color: royalblue; height: 100px; width: 100px; padding: 8px; margin-bottom: 8px; border: 5px double black; border-radius: 8px;">
-        <div style="background-color: aliceblue; height: 50px; width: 50px;">
+    <div class="box2-body">
+        <div class="span-body">
 
         </div>
-        <div style="background-color: wheat; height: 50px;width: 50px;">
+
+        <div class="span2-body">
 
         </div>
     </div>
     <div>
-        <span style="margin-right: 8px;">1</span>
-        <span style="margin-right: 8px;">2</span>
-        <span style="margin-right: 8px;">3</span>
+        <span class="number1-box">1</span>
+        <span class="number2-box">2</span>
+        <span class="number3-box">3</span>
     </div>
 
-    <div style="background-color: chocolate; height: 200px; width: 200px; margin: 20px; border: 10px ; border-style: inset; border-color: pink; border-radius: 50% ;">
+    <div class="box3-body">
 
     </div>
 
