--- a/index3.html
+++ b/index3.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/index3.css">
+
 </head>
-<body">
-    <h1 style="text-align: center;"> <i>Personal Details</i> </h1>
-    <h2 style="text-align: right; color: cadetblue;"> <u>Kokab Ali</u> </h2>
+
+<body>
+    <h1 class="personal-details"> <i>Personal Details</i> </h1>
+    <h2 class="kokab-ali"> <u>Kokab Ali</u> </h2>
     <p>Hii i am <b> kokab Ali </b> i am a web developer, My favourite colour is <u> sky blue and black </u>, My
         favourites sport is <a href="https://en.wikipedia.org/wiki/Cricket">Cricket</a> </p>
 
@@ -19,10 +22,9 @@
     </ul>
 
 
-    <img style="border-radius: 20px; margin: 78%; margin-top: 10px;"
-        src="c:\Users\kokap\Documents\WhatsApp Image 2025-07-08 at 19.36.24_d22866d9.jpg" alt="boyinchair"
-        height="250px" width="300px">
-    <p style="color: aliceblue;"> hii this is <b>kokab ali</b></p>
+    <img class="img-body" src="c:\Users\kokap\Documents\WhatsApp Image 2025-07-08 at 19.36.24_d22866d9.jpg"
+        alt="boyinchair" height="250px" width="300px">
+    <p class="p-body"> hii this is <b>kokab ali</b></p>
     </body>
 
 </html>
