--- a/index4.html
+++ b/index4.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body style="background-color: purple; padding: 20px;">
+    <link rel="stylesheet" href="./styles/index4.css">
 
-    <div style="height: 200px; width: 200px; border: 1px solid black; border-radius: 8px;">
-        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb" width="200px" height="200px" style="border-radius: 8px;" />
+   
+</head>
+
+<body class="background-color">
+
+    <div class="img-body">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb" width="200px" height="200px"
+            class="img-border-radius" />
     </div>
 
     <br>
     <br>
 
-    <div style="
-        height: 200px; 
-        width: 200px; 
-        border: 1px solid black; 
-        border-radius: 8px; 
-        background-image: url(https://images.unsplash.com/photo-1506744038136-46273834b3fb);
-        background-size: cover;
-        background-position: center;
-        opacity: 1;
-        outline: 5px solid black;
-        box-shadow: 10px 20px 30px grey;
-    "></div>
+    <div class="img2-body">
+
+    </div>
 </body>
+
 </html>
