--- a/index6.html
+++ b/index6.html
@@ -7,10 +7,24 @@
     <title>Document</title>
 </head>
 
-<body style="font-size: 16px;">
-    <div style="font-size: 1em;">
+<style>
+    .font-size {
+        font-size: 16px;
+    }
+
+    .parent-1 {
+        font-size: 1em;
+    }
+
+    .child-1 {
+        font-size: 2em;
+    }
+</style>
+
+<body class="font-size">
+    <div class="parent-1">
         Parent 1
-        <div style="font-size: 2em;">
+        <div class="child-1">
             Child 1
             <div style="font-size: 2em;">
                 Nested Child 1
