--- a/index9.html
+++ b/index9.html
@@ -15,6 +15,7 @@
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
+            border-radius: 8px;
         }
 
         .box-2 {
