--- a/table1.html
+++ b/table1.html
@@ -25,13 +25,17 @@
             border: 1px solid black;
             font-weight: bold;
         }
+        .costum-table thead tr:nth-child(1) th:nth-child(2) {
+            background-color: hsl(218.57deg 56% 90.2%);
+
+        }
     </style>
 </head>
 
 <body>
     <div>
         <table class="costum-table">
-            <thead>
+            <thead >
                 <tr>
                     <td></td>
                     <td>Baseball</td>
