--- a/table1.html
+++ b/table1.html
@@ -5,43 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body {
-            padding: 8px;
-            background-color: hsl(0deg 0% 99.8%);
-        }
-
-        .costum-table {
-            border-collapse: collapse;
-        }
-
-        .costum-table td,
-        .costum-table th {
-            text-align: left;
-            padding-right: 48px;
-            padding-left: 48px;
-            padding-bottom: 24px;
-            padding-top: 24px;
-            border: 1px solid black;
-            font-weight: bold;
-        }
-        .costum-table thead tr:nth-child(1) th:nth-child(2) {
-            background-color: hsl(218.57deg 56% 90.2%);
-
-        }
-    </style>
+    <link rel="stylesheet" href="./table1.css">
 </head>
 
 <body>
     <div>
         <table class="costum-table">
-            <thead >
+            <thead>
                 <tr>
-                    <td></td>
-                    <td>Baseball</td>
-                    <td>Basketball</td>
-                    <td>Football</td>
-                    <td>Total</td>
+                    <th></th>
+                    <th>Baseball</th>
+                    <th>Basketball</th>
+                    <th>Football</th>
+                    <th>Total</th>
                 </tr>
             </thead>
             <tbody>
