--- a/table2.html
+++ b/table2.html
@@ -39,8 +39,14 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Public Swim 06:30 - 10:30</td>
-                    <td>Public Swim 06:30 - 09:00</td>
+                    <td>
+                        <div><span>Public Swim</span></div>
+                        <div><span>06:30 - 10:30</span></div>
+                    </td>
+                    <td>
+                        <div><span>Public Swim</span></div>
+                        <div><span>06:30 - 09:00</span></div>
+                    </td>
                     <td>Public Swim 06:30 - 09:00</td>
                     <td>Public Swim 06:30 - 11:15</td>
                     <td>Public Swim 06:30 - 09.00</td>
@@ -53,7 +59,11 @@
                     <td>Education Swimming Lessons 09:00 - 12:00</td>
                     <td>Aquacise 11:15 - 12:00</td>
                     <td>Education Swimming Lessons 09.00 - 12:00</td>
-                    <td>Oldham Active Kids Swimming Lessons 09.00 - 13:00</td>
+                    <td>
+                        <div><span>Oldham Active</span></div>
+                        <div><span>Kids Swimming Lessons</span></div>
+                        <div><span>09.00 - 13:00</span></div>
+                    </td>
                     <td>Public Swim 09:00 - 11:00</td>
                 </tr>
                 <tr>
