--- a/table3.html
+++ b/table3.html
@@ -11,10 +11,32 @@
         text-align: center;
     }
     .costum-table{
+        border-collapse: separate;
+        border-spacing: 1px;
+        background-color: green;
+        border-radius: 50px;
+        border: 1px solid green;
+        margin-left: 30%;
+    }
+    .costum-table td, 
+    .costum-table th{
+        background-color: hsl(142.29deg 89.74% 92.35%);
         padding-left: 48px;
         padding-right: 48px;
         padding-bottom: 24px;
         padding-top: 24px;
+    }
+    .costum-table thead tr:nth-child(1) th:first-child{
+        border-top-left-radius: 50px;
+    }
+     .costum-table thead tr:nth-child(1) th:last-child{
+        border-top-right-radius: 50px;
+    }
+    .costum-table tfoot tr:last-child td:first-child{
+        border-bottom-left-radius: 50px;
+    }
+      .costum-table tfoot tr:last-child td:last-child{
+        border-bottom-right-radius: 50px;
     }
     </style>
 
