--- a/firstwebsite/travelAgency.html
+++ b/firstwebsite/travelAgency.html
@@ -1,23 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .body-img{
+        .body-img {
             background-image: url(4k-plane.jpg);
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-attachment: fixed;
         }
 
-        
+        h1 {
+            color: tomato;
+            text-align: center;
+            font-size: 80px;
+            margin-top: 10px;
+        }
+
+        .div1 div {}
     </style>
 </head>
+
 <body class="body-img">
+    <h1>Travel Agency</h1>
+
     <div>
-        
+        <div>
+            <img src="Bankok.jpeg" alt="Bankok city" height="250px" width="250px">
+        </div>
+        <div>
+            <img src="Bali.jpeg" alt="Bali city" height="250px" width="250px">
+        </div>
+        <div>
+            <img src="Tokyo.jpeg" alt="Tokyo city" height="250px" width="250px">
+        </div>
     </div>
+
+    <div>
+        <div>
+            <img src="Zurich.jpeg" alt="Zurich city" height="250px" width="250px">
+        </div>
+        <div>
+            <img src="Newdelhi.jpg" alt=" New Delhi city" height="250px" width="250px">
+        </div>
+        <div>
+            <img src="Berlin.jpg" alt="Berlin city" height="250px" width="250px">
+        </div>
+    </div>
+
 </body>
+
 </html>
