--- a/firstwebsite/travelAgency.html
+++ b/firstwebsite/travelAgency.html
@@ -20,14 +20,34 @@
             margin-top: 10px;
         }
 
-        .div1 div {}
+        .div1 div {
+            display: inline-block;
+            margin-top: 16px;
+            margin-left: 150px;
+            margin-bottom: 50px;
+            padding: 10px;
+            border: 2px solid white;
+            height: 300px;
+            width: 250px;
+        }
+
+        .div2 div {
+            display: inline-block;
+            margin-top: 16px;
+            margin-left: 150px;
+            padding: 10px;
+            border: 2px solid white;
+            height: 300px;
+            width: 250px;
+        }
+        
     </style>
 </head>
 
 <body class="body-img">
     <h1>Travel Agency</h1>
 
-    <div>
+    <div class="div1">
         <div>
             <img src="Bankok.jpeg" alt="Bankok city" height="250px" width="250px">
         </div>
@@ -39,7 +59,7 @@
         </div>
     </div>
 
-    <div>
+    <div class="div2">
         <div>
             <img src="Zurich.jpeg" alt="Zurich city" height="250px" width="250px">
         </div>
