--- a/firstwebsite/travelAgency.html
+++ b/firstwebsite/travelAgency.html
@@ -6,69 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .body-img {
+        body {
             background-image: url(4k-plane.jpg);
             background-repeat: no-repeat;
-            background-size: 100% 100%;
-            background-attachment: fixed;
+            background-size: cover;
         }
 
         h1 {
             color: tomato;
             text-align: center;
-            font-size: 80px;
-            margin-top: 10px;
+            font-size: 50px;
         }
 
         .div1 div {
-            display: inline-block;
-            margin-top: 16px;
-            margin-left: 150px;
-            margin-bottom: 50px;
-            padding: 10px;
-            border: 2px solid white;
-            height: 300px;
-            width: 250px;
+            margin: 100px;
+            margin-top: 20px;
+            padding-left: 32px;
+            border: 2px solid black;
+            border-radius: 10px;
+            width: 200px;
+            height: 250px;
+            background-color: cadetblue;
+            display: inline-block
         }
 
-        .div2 div {
-            display: inline-block;
-            margin-top: 16px;
-            margin-left: 150px;
-            padding: 10px;
-            border: 2px solid white;
-            height: 300px;
-            width: 250px;
+        .div2 div{
+            margin: 100px;
+            margin-top: 20px;
+            padding-left: 32px;
+            border: 2px solid black;
+            border-radius: 10px;
+            width: 200px;
+            height: 250px;
+            background-color: cadetblue;
+            display: inline-block
         }
-        
     </style>
 </head>
 
-<body class="body-img">
+<body>
     <h1>Travel Agency</h1>
-
     <div class="div1">
-        <div>
-            <img src="Bankok.jpeg" alt="Bankok city" height="250px" width="250px">
-        </div>
-        <div>
-            <img src="Bali.jpeg" alt="Bali city" height="250px" width="250px">
-        </div>
-        <div>
-            <img src="Tokyo.jpeg" alt="Tokyo city" height="250px" width="250px">
-        </div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
 
     <div class="div2">
-        <div>
-            <img src="Zurich.jpeg" alt="Zurich city" height="250px" width="250px">
-        </div>
-        <div>
-            <img src="Newdelhi.jpg" alt=" New Delhi city" height="250px" width="250px">
-        </div>
-        <div>
-            <img src="Berlin.jpg" alt="Berlin city" height="250px" width="250px">
-        </div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
 
 </body>
