--- a/firstwebsite/travelAgency.html
+++ b/firstwebsite/travelAgency.html
@@ -10,6 +10,7 @@
             background-image: url(4k-plane.jpg);
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         h1 {
@@ -18,28 +19,11 @@
             font-size: 50px;
         }
 
-        .div1 div {
-            margin: 100px;
-            margin-top: 20px;
-            padding-left: 32px;
-            border: 2px solid black;
-            border-radius: 10px;
-            width: 200px;
+        img {
             height: 250px;
-            background-color: cadetblue;
-            display: inline-block
-        }
-
-        .div2 div{
+            width: 250px;
             margin: 100px;
-            margin-top: 20px;
-            padding-left: 32px;
-            border: 2px solid black;
-            border-radius: 10px;
-            width: 200px;
-            height: 250px;
-            background-color: cadetblue;
-            display: inline-block
+            margin-top: 64px;
         }
     </style>
 </head>
@@ -47,15 +31,15 @@
 <body>
     <h1>Travel Agency</h1>
     <div class="div1">
-        <div></div>
-        <div></div>
-        <div></div>
+        <span><img src="Bankok.jpeg" alt="bankok city"></span>
+        <span><img src="Bali.jpeg" alt="Bali city"></span>
+        <span><img src="Tokyo.jpeg" alt="Tokyo city"></span>
     </div>
 
     <div class="div2">
-        <div></div>
-        <div></div>
-        <div></div>
+        <span><img src="Zurich.jpeg" alt="Zurich city"></span>
+        <span><img src="Newdelhi.jpg" alt="Newdelhi city"></span>
+        <span><img src="Berlin.jpg" alt="Berlin city"></span>
     </div>
 
 </body>
