--- a/firstwebsite/travelAgency.html
+++ b/firstwebsite/travelAgency.html
@@ -17,29 +17,37 @@
             color: tomato;
             text-align: center;
             font-size: 50px;
+            margin-top: 8px;
         }
 
         img {
             height: 250px;
             width: 250px;
-            margin: 100px;
-            margin-top: 64px;
+            margin: 90px;
+            margin-top: 4px;
+            border-bottom: 48px solid white;
+            border-radius: 8px 8px 8px 8px;
         }
     </style>
 </head>
 
 <body>
     <h1>Travel Agency</h1>
-    <div class="div1">
-        <span><img src="Bankok.jpeg" alt="bankok city"></span>
-        <span><img src="Bali.jpeg" alt="Bali city"></span>
-        <span><img src="Tokyo.jpeg" alt="Tokyo city"></span>
+    <div>
+        <a href=""><span><img src="Bankok.jpeg" alt="bankok city"></span></a>
+        <a href=""><span><img src="Bali.jpeg" alt="Bali city"></span></a>
+        <a href=""><span><img src="Tokyo.jpeg" alt="Tokyo city"></span></a>
+
     </div>
 
-    <div class="div2">
-        <span><img src="Zurich.jpeg" alt="Zurich city"></span>
-        <span><img src="Newdelhi.jpg" alt="Newdelhi city"></span>
-        <span><img src="Berlin.jpg" alt="Berlin city"></span>
+    <div>
+
+        <a href=""><span><img src="Zurich.jpeg" alt="Zurich city"></span></a>
+        <a href=""> <span><img src="Newdelhi.jpg" alt="Newdelhi city"></span></a>
+        <a href=""> <span><img src="Berlin.jpg" alt="Berlin city"></span></a>
+
+
+    </div>
     </div>
 
 </body>
