--- a/firstwebsite/itineray.html
+++ b/firstwebsite/itineray.html
@@ -4,42 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./itineray.css">
+    <style>
+        h1{
+            display: inline;
+           border: 1px solid black;
+           background-color: aqua;
+        }
+        
+    </style>
 </head>
 <body>
-
-    <div class="itinerary-container">
-        <h1>My European Adventure</h1>
-        <div class="day-section">
-            <h2>Day 1: Arrival in Paris</h2>
-            <p class="date">October 26, 2025</p>
-            <ul>
-                <li>Morning: Arrive at Charles de Gaulle Airport (CDG)</li>
-                <li>Afternoon: Check into hotel near Eiffel Tower</li>
-                <li>Evening: Dinner at a local bistro, explore Champs-Élysées</li>
-            </ul>
-        </div>
-        <div class="day-section">
-            <h2>Day 2: Paris Exploration</h2>
-            <p class="date">October 27, 2025</p>
-            <ul>
-                <li>Morning: Visit the Louvre Museum</li>
-                <li>Afternoon: Eiffel Tower visit and Seine River cruise</li>
-                <li>Evening: Montmartre and Sacré-Cœur Basilica</li>
-            </ul>
-        </div>
-        <div class="day-section">
-            <h2>Day 3: Travel to Rome</h2>
-            <p class="date">October 28, 2025</p>
-            <ul>
-                <li>Morning: High-speed train to Rome</li>
-                <li>Afternoon: Check into hotel, explore Colosseum exterior</li>
-                <li>Evening: Dinner near Trevi Fountain</li>
-            </ul>
-        </div>
-    </div>
-</body>
-</html>
-
+    <h1>Bali Indonesia</h1>
 </body>
 </html>
