--- a/firstwebsite/itineray.html
+++ b/firstwebsite/itineray.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1{
+        h1 {
             display: inline;
-           border: 1px solid black;
-           background-color: aqua;
+            border: 1px solid black;
+            background-color: aqua;
         }
-        
     </style>
 </head>
+
 <body>
     <h1>Bali Indonesia</h1>
-</body>
+
+    <h2>* itineray</h2>
+    <div>
+        <p>From: Delhi</p>
+        <p>To: Bali</p>
+    </div>
+    <div>
+        <label for="numberofadults">Number of Adults :</label>
+
+        <select name="numberofadults" id="numberofadults">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+        </select>
+    </div>
+
 </html>
