--- a/firstwebsite/travelAgency.html
+++ b/firstwebsite/travelAgency.html
@@ -61,7 +61,7 @@
 
         <div class="travel-card">
 
-            <a href=""><img class="location-img" src="Bankok.jpeg" alt="bankok city"></a>
+            <a href="bankok.itineray.html"><img class="location-img" src="Bankok.jpeg" alt="bankok city"></a>
 
             <div class="location-details">
                 <span>2938473249</span>
@@ -70,7 +70,7 @@
         </div>
         <div class="travel-card">
 
-            <a href="itineray.html"><img class="location-img" src="Bali.jpeg" alt="Bali city"></a>
+            <a href="Bali.itineray.html"><img class="location-img" src="Bali.jpeg" alt="Bali city"></a>
 
             <div class="location-details">
                 <span>2938473249</span>
