--- a/firstwebsite/Bali.itineray.html
+++ b/firstwebsite/Bali.itineray.html
@@ -13,6 +13,8 @@
             display: inline;
             border: 1px solid black;
             background-color: aqua;
+            padding-left: 8px;
+            padding-right: 8px;
         }
     </style>
 </head>
