--- a/firstwebsite/Dubai.itineray.html
+++ b/firstwebsite/Dubai.itineray.html
@@ -4,28 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-          .div1{
-            padding: 16px;
-        }
-        h1 {
-            display: inline;
-            border: 1px solid black;
-          background-color: cadetblue;
-          padding-left: 8px;
-          padding-right: 8px;
-        }
-    </style>
 </head>
 <body>
-      <div class="div1">
+          <div class="div1">
 
-        <h1>Bankok</h1>
+        <h1>Dubai</h1>
 
         <h2>* itineray</h2>
         <div>
             <p>From: Delhi</p>
-            <p>To: bankok</p>
+            <p>To: Dubai</p>
         </div>
         <div>
             <label for="numberofadults">Number of Adults:</label>
@@ -60,7 +48,7 @@
             </select>
         </div>
         <div>
-            <p>Expenses: Rs 90,000</p>
+            <p>Expenses: Rs 1,20,000</p>
         </div>
 
     </div>
