--- a/firstwebsite/travelAgency.html
+++ b/firstwebsite/travelAgency.html
@@ -27,6 +27,9 @@
             border-radius: 8px;
             box-shadow: 30px 30px 40px rgb(24, 24, 24);
         }
+        .travel-card:hover{
+            transform: scale(1.05);
+        }
 
         .travel-card .location-img  {
             width: 100%;
